# nuage_shim

./: .gitignore  AUTHORS  LICENSE  README.md  requirements.txt  setup.cfg
doc/: api_model.rst
nuage_shim/: base.py  gluon_api_spec.rst  main.py  model.py  vm_split_activation.py  vm_split_activation_l2.py
nuage_shim/api_models/: net_l3vpn.py
nuage_shim/backends/: nuage_net_l3vpn.py
tests/: etcd_send.py  etcd_watch.py  test_NUSplitActivation.py  test_utils.py
