[metadata]
name = nuage-shim
summary = Nuage Shim Server
description-file =
    README.rst
author = Kamal Hussain, Thomas Hambleton
author-email = kamal.hussain@nokia.com, Thomas.Hambleton@nokia.com
classifier =
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    nuage_shim

[entry_points]
console_scripts =
	nuage-shim-server = nuage_shim.main:main
